Add mockito dependency to get tests to run again.