@@ -5,7 +5,7 @@
 
 	<groupId>com.detroitlabs</groupId>
 	<artifactId>katalon-mobile-util</artifactId>
-	<version>1.14.0-SNAPSHOT</version>
+	<version>1.13.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>katalon-mobile-util</name>
@@ -32,7 +32,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>3.8.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -61,10 +61,25 @@
 				</executions>
 			</plugin>
 			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-surefire-plugin</artifactId>
-			    <version>2.22.0</version>
-			</plugin>			
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>
+						--illegal-access=warn
+					</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>
+						--illegal-access=warn
+					</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -89,6 +104,13 @@
 			<artifactId>java-client</artifactId>
 			<version>6.1.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-testng -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-testng</artifactId>
+			<version>0.1.1</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- Katalon jars are not included in maven repositories and need to be copied to the ${basedir}/lib --> 
 		<!-- See http://mark.koli.ch/maven-add-local-jar-dependency-to-classpath -->
 		<dependency>
@@ -112,12 +134,18 @@
 		    <artifactId>junit</artifactId>
 		    <version>4.12</version>
 		    <scope>test</scope>
-		</dependency>	
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.14.3</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-core -->
 		<dependency>
 		    <groupId>org.powermock</groupId>
 		    <artifactId>powermock-core</artifactId>
-		    <version>1.7.4</version>
+		    <version>2.0.2</version>
 		    <scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
@@ -131,28 +159,28 @@
 		<dependency>
 		    <groupId>org.powermock</groupId>
 		    <artifactId>powermock-api-mockito2</artifactId>
-		    <version>1.7.4</version>
+		    <version>2.0.2</version>
 		    <scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4 -->
 		<dependency>
 		    <groupId>org.powermock</groupId>
 		    <artifactId>powermock-module-junit4</artifactId>
-		    <version>1.7.4</version>
+		    <version>2.0.2</version>
 		    <scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-junit4-rule -->
 		<dependency>
 		    <groupId>org.powermock</groupId>
 		    <artifactId>powermock-module-junit4-rule</artifactId>
-		    <version>1.7.4</version>
+		    <version>2.0.2</version>
 		    <scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-classloading-xstream -->
 		<dependency>
 		    <groupId>org.powermock</groupId>
 		    <artifactId>powermock-classloading-xstream</artifactId>
-		    <version>1.7.4</version>
+		    <version>2.0.2</version>
 		    <scope>test</scope>
 		</dependency>
 		
